[package]
name = "ytmp3"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "Download YouTube, Instagram, TikTok, and X/Twitter videos as MP3/M4A/Opus via yt-dlp"
license = "MIT"
repository = "https://github.com/emilindqvist/YT-mp3-Converter"
readme = "README.md"
keywords = ["youtube", "yt-dlp", "mp3", "audio", "cli"]
categories = ["command-line-utilities", "multimedia::audio"]

[[bin]]
name = "ytmp3"
path = "src/main.rs"

[dependencies]
clap      = { version = "4.5", features = ["derive", "wrap_help"] }
anyhow    = "1.0"
thiserror = "1.0"
indicatif = "0.17"
url       = "2.5"
dirs      = "5.0"
ctrlc     = { version = "3.4", features = ["termination"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
